<resources>
    <string name="app_name">Sfedu_Project</string>
    <string name="appname">AppName</string>
    <string name="your_awsome_app">Your awsome app</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_pswd">Forgot password?</string>
    <string name="guest">Continue without registration</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nick</string>
    <string name="login">LOGIN</string>
    <string name="reg">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with">Login with</string>


</resources>