<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:layout_marginTop="200sp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appname"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

        <TextView
            android:id="@+id/login_textview_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/your_awsome_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20sp">


        <EditText
            android:id="@+id/full_name_reg"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nickname_reg"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/email_reg"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/password_reg"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="24sp" />
        <Button
            android:id="@+id/register_btn"
            android:layout_width="350sp"
            android:layout_height="60sp"
            android:backgroundTint="#0ED6B9"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:textAllCaps="true"
            android:text="@string/reg" />

    </LinearLayout>


</LinearLayout>