<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:layout_marginTop="260sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/appname"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/login_textview_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/your_awsome_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:background="#812B0F43"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:layout_marginTop="35sp"
            android:background="#812B0F43"
            android:fontFamily="@font/overpass_mono_light"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/log_in_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/overpass_mono"
            android:text="@string/login_with"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>